# mcp-sap-gui-advanced

./: .gitignore  PRIVACY.md  README.md  SETUP.md  quick-setup.bat  quick-setup.sh  setup.bat  setup.sh
python/: README.md  claude_desktop_direct.json  direct_sap_server.py  pyproject.toml  requirements.txt  test_comprehensive.py  test_direct.py
typescript/: README.md  claude-desktop-config.json  direct-sap-server.ts  package-lock.json  package.json  test-direct.ts  tsconfig.json
